--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+     <script src="https://kit.fontawesome.com/8c1870b6fa.js" crossorigin="anonymous"></script>
+    <title>Portfolio</title>
+  </head>
+  <body>
+    <!--header section start-->
+    <header>
+      <h2 class="logo"><a href="#">Faiz</a></h2>
+      <nav>
+        <div class="hamburger">
+          <svg width="750px" height="750px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="none">
+            <path stroke="#6070FF" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h22M5 16h22M5 24h22"/>
+          </svg>
+        </div>
+       
+      </nav>
+    </header>
+    <!--header section ends-->
 
+    <!--headline section starts-->
+    <section class="headline-main">
+      <section class="headline">
+        <h1 class="headline-heading">I'm Faiz.<br />Glad to see you!</h1>
+        <p class="headline-paragraph">
+          I'm a software developer! I can help you build a product , feature or
+          website Look through some of my work and experience! If you like what
+          you see and have a project you need coded, don't hestiate to contact
+          me.
+        </p>
+        <h4 class="headline-sm-suport">LET'S CONNECT</h4>
+        <ul class="social-icons">
+          <li>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-m"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-angellist"></i></a>
+          </li>
+        </ul>
+      </section>
+    </section>
+    <!--headline section ends-->
+
+  </body>
+</html>
