--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <!--Card works ends-->
         <!-- Card 2 starts -->
         <li class="works-card">
-          <img src="./assets/Snapshoot Portfolio (3).png" alt="Recent Work" />
+          <img src="./assets/multi-post.png" alt="Recent Work" />
           <div class="works-card-main">
             <h2 class="works-card-heading-large">Multi-Post Stories</h2>
             <div class="works-card-client">
