--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="langlist">
             <ul class="langlistul">
               <li>
-                <img src="./assets/Javascript.png"/>
+                <img src="./assets/javascript.png"/>
                 <p>JavaScript</p>
               </li>
               <li>
