--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           that you need built or a project that needs coding, I'd love to help
           with it.
         </p>
-        <form class="contact-form" action="https://formspree.io/f/mjvdqdaj method="POST">
+        <form class="contact-form" action="https://formspree.io/f/mjvdqdaj" method = "POST">
           <input
             class="contact-input"
             required
