Updated index.html & style.css

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </section>
     <section>
       <div class="contact-container">
-        <h1 class="contact-heading">Contact me</h1>
+        <h3 class="contact-heading">Contact me</h3>
         <p class="contact-paragraph">
           If you have an application you are interested in developing, a feature
           that you need built or a project that needs coding, I'd love to help
@@ -240,7 +240,7 @@
             maxlength="30"
             name="name"
             type="text"
-            placeholder="Please enter your name (max 30 characters)"
+            placeholder="Please enter your name"
           />
           <input
             class="contact-input"
@@ -257,7 +257,7 @@
           name="message"
           cols="30"
           rows="9"
-          placeholder="Write your message here (up to 500 characters)"
+          placeholder="Write your message here."
         ></textarea>
         <button class="contact-button" type="submit">
           Get In Touch
