--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
   <!--header section start-->
   <header class="toolbar">
     <div class="logo">Faiz</div>
+    <nav>
     <div class="menu-icon">&#9776;</div>
+    <ul class="nav-links">
+      <li class="nav-link">Portfolio</li>
+      <li class="nav-link">About</li>
+      <li class="nav-link">Contact</li>
+    </ul>
+    </nav>
   </header> 
   <!--header section end-->
   <!--headline section starts-->
@@ -42,7 +49,7 @@
       </ul>
     </section>
     <section class="works">
-      <div class="card">
+      <div class="card-reverse">
         <div class="snap">
           <img src="./assets/Snapshoot Portfolio.png"/>
         </div>
@@ -81,9 +88,9 @@
             <div class="cardtitle"><h4>Multi-Post Stories</h4></div>
             <div class="cardlistitems">
               <ul>
-                <li><span>CANOPY</span></li>
-                <li class="lists23">Back End Dev</li>
-                <li class="lists23">2016</li>
+                <li><span>Facebook</span></li>
+                <li class="lists23">Full Stack Dev</li>
+                <li class="lists23">2015</li>
               </ul>
             </div>
           </div>
@@ -93,7 +100,8 @@
           <div class="cardul">
             <ul>
               <li>HTML</li>
-              <li>CSS</li>
+              <li>ruby on rails</li>
+              <li>css</li>
               <li>JavaScript</li>
             </ul>
           </div>
@@ -102,18 +110,18 @@
           </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card-reverse">
         <div class="snap">
           <img src="./assets/Snapshoot Portfolio (2).png"/>
         </div>
         <div class="block">
           <div class="blocktexts">
-            <div class="cardtitle"><h4>Tonic</h4></div>
+            <div class="cardtitle"><h4>Facebook 360</h4></div>
             <div class="cardlistitems">
               <ul>
-                <li class="title"><span>CANOPY</span></li>
-                <li class="lists23">Back End Dev</li>
-                <li class="lists23">2016</li>
+                <li class="title"><span>Facebook</span></li>
+                <li class="lists23">Full Stack Dev</li>
+                <li class="lists23">2015</li>
               </ul>
             </div>
           </div>
@@ -123,7 +131,8 @@
           <div class="cardul">
             <ul>
               <li>HTML</li>
-              <li>CSS</li>
+              <li>ruby on rails</li>
+              <li>css</li>
               <li>JavaScript</li>
             </ul>
           </div>
@@ -138,12 +147,12 @@
         </div>
         <div class="block">
           <div class="blocktexts">
-            <div class="cardtitle"><h4>Multi-Post Stories</h4></div>
+            <div class="cardtitle"><h4>Uber Navigation</h4></div>
             <div class="cardlistitems">
               <ul>
-                <li><span>CANOPY</span></li>
-                <li class="lists23">Back End Dev</li>
-                <li class="lists23">2016</li>
+                <li><span>Uber</span></li>
+                <li class="lists23">Lead Developer</li>
+                <li class="lists23">2018</li>
               </ul>
             </div>
           </div>
@@ -153,7 +162,8 @@
           <div class="cardul">
             <ul>
               <li>HTML</li>
-              <li>CSS</li>
+              <li>ruby on rails</li>
+              <li>css</li>
               <li>JavaScript</li>
             </ul>
           </div>
