--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="works">
       <div class="card-reverse">
         <div class="snap">
-          <img src="./assets/Snapshoot Portfolio.png"/>
+          <img src="./assets/Snapshoot Portfolio9.png"/>
         </div>
         <div class="block">
           <div class="blocktexts">
@@ -81,7 +81,7 @@
       </div>
       <div class="card">
         <div class="snap">
-          <img src="./assets/Snapshoot Portfolio (1).png"/>
+          <img src="./assets/Snapshoot Portfolio (5).png"/>
         </div>
         <div class="block">
           <div class="blocktexts">
@@ -112,7 +112,7 @@
       </div>
       <div class="card-reverse">
         <div class="snap">
-          <img src="./assets/Snapshoot Portfolio (2).png"/>
+          <img src="./assets/Snapshoot Portfolio.png"/>
         </div>
         <div class="block">
           <div class="blocktexts">
@@ -143,7 +143,7 @@
       </div>
       <div class="card">
         <div class="snap">
-          <img src="./assets/Snapshoot Portfolio (5).png"/>
+          <img src="./assets/Snapshoot Portfolio (2).png"/>
         </div>
         <div class="block">
           <div class="blocktexts">
