--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- my Card 1 starts -->
       
         <li class="my-works-card">
-          <img src="./assets/Snapshoot Portfolio (1).png" alt="skills and job role" title="Canopy job role , backend dev year 2015"/>
+          <img src="./assets/Snapshoot Portfolio9.png" alt="skills and job role" title="Canopy job role , backend dev year 2015"/>
           <div class="works-card-main">
             <h2 class="works-card-heading-large">Multi-Post
               Stories</h2>
@@ -91,7 +91,7 @@
         <!-- my Card 2 starts -->
 
         <li class="my-works-card">
-          <img src="./assets/Snapshoot Portfolio (3).png" alt="skills and job role" title="Facebook Profile and Work history"/>
+          <img src="./assets/Snapshoot Portfolio (5).png" alt="skills and job role" title="Facebook Profile and Work history"/>
           <div class="works-card-main">
             <h2 class="works-card-heading-large">Multi-Post Stories</h2>
             <div class="works-card-client">
@@ -217,7 +217,7 @@
             <li class="my-about-skill-body">
               <img
                 class="javascript-icon"
-                src="./assets/Ellipse javascript 1.png"
+                src="./assets/javascript.png"
                 alt="javascript-icon"title="JavaScript official icon"
               />
               <span class="my-about-skill-text">JavaScript</span>
@@ -225,7 +225,7 @@
             <li class="my-about-skill-body">
               <img
                 class="html-icon"
-                src="./assets/Ellipse html 1.png"
+                src="./assets/html.png"
                 alt="html-icon" title="Image title or description"
               />
               <span class="my-about-skill-text">HTML</span>
@@ -233,7 +233,7 @@
             <li class="my-about-skill-body">
               <img
                 class="css-icon"
-                src="./assets/Ellipse css 1.png"title="html official language"
+                src="./assets/css.png"title="html official language"
                 alt="css-icon"
               />
               <span class="my-about-skill-text">CSS</span>
