--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             <h2 class="works-card-heading-large">Tonic</h2>
             <div class="works-card-client">
               <p class="paragraph">CANOPY</p>
-              <p class="fa-solid fa-circle works-card-client-counter"></p>
-              <p class="works-card-client-role paragraph">Back End Dev</p>
-              <p class="fa-solid fa-circle works-card-client-counter"></p>
-              <p class="works-card-client-year paragraph">2015</p>
+              <p class="fa-solid fa-circle my-works-card-client-counter"></p>
+              <p class="my-works-card-client-role paragraph">Back End Dev</p>
+              <p class="fa-solid fa-circle my-works-card-client-counter"></p>
+              <p class="my-works-card-client-year paragraph">2015</p>
             </div>
             <p class="paragraph works-card-paragraph">
               A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -147,10 +147,10 @@
                     <h2 class="works-card-heading-large">Tonic</h2>
                     <div class="works-card-client">
                       <p class="paragraph">UBER</p>
-                      <p class="fa-solid fa-circle works-card-client-counter"></p>
-                      <p class="works-card-client-role paragraph">Back End Dev</p>
-                      <p class="fa-solid fa-circle works-card-client-counter"></p>
-                      <p class="works-card-client-year paragraph">2015</p>
+                      <p class="fa-solid fa-circle my-works-card-client-counter"></p>
+                      <p class="my-works-card-client-role paragraph">Back End Dev</p>
+                      <p class="fa-solid fa-circle my-works-card-client-counter"></p>
+                      <p class="my-works-card-client-year paragraph">2015</p>
                     </div>
                     <p class="paragraph works-card-paragraph">
                       A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -228,7 +228,7 @@
                 src="./assets/html.png"
                 alt="html-icon" title="Image title or description"
               />
-              <span class="my-about-skill-text">HTML</span>
+              <span class="my-about-skill-text">&nbsp;HTML&nbsp;</span>
             </li>
             <li class="my-about-skill-body">
               <img
@@ -236,7 +236,7 @@
                 src="./assets/css.png"title="html official language"
                 alt="css-icon"
               />
-              <span class="my-about-skill-text">CSS</span>
+              <span class="my-about-skill-text">&nbsp;CSS&nbsp;</span>
             </li>
           </ul>
         </li>
