--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <title>Faiz-Desktop-Version</title>
   </head>
   <body>
-   
     <!--my header section starts-->
     <header>
-      <h2 class="my-logo"><span style="font-weight: normal;">Faiz M</span></h2>
+      <h2 class="my-logo">Faiz M</h2>
       <nav>
         <div class="menu-icon">
           &#9776;
         </div>
         <ul class="navigation-bar">
-          <li class="nav-item"><a href="#" style="text-decoration: none;">Portfolio</a></li>
-          <li class="nav-item"><a href="#" style="text-decoration: none;">About</a></li>
-          <li class="nav-item"><a href="#" style="text-decoration: none;">Contact</a></li>
+          <li class="nav-item"><a href="#" >Portfolio</a></li>
+          <li class="nav-item"><a href="#">About</a></li>
+          <li class="nav-item"><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -302,5 +301,7 @@
       </form>    
   </section>
     <!--my Contact Me Section Ends -->
+    <script src="app.js"></script>
+
   </body>
 </html>
