--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-   <script src="https://kit.fontawesome.com/8c1870b6fa.js" crossorigin="anonymous"></script>   
+   <script src="https://kit.fontawesome.com/8c1870b6fa.js" crossorigin="anonymous"></script>
     <title>Faiz-Desktop-Version</title>
   </head>
   <body>
@@ -14,22 +14,12 @@
       <h2 class="my-logo"><a href="#">Faiz</a></h2>
       <nav>
         <div class="menu-icon">
-          <p id="show-nav" class="menu-icon-button">
-            &#9776;
-          </p> 
-          <!-- my-mobile-menu start -->
-          <div id="my-mobile-menu" class="hide-menu">
-            <button id="hide-nav" class="close-btn">
-              X
-            </button>
-            <ul id="mobile-nav-links">
-              <li><a href="#my-portfolio">Portfolio</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-          <!-- my-mobile-menu finish -->
-        </div>
+          <p
+            id="show-nav"
+            class="mob-nav-menu-butn">&#9776;</p>
+          <!--my mobile-menu start -->
+          
+        <!-- my-mobile-menu finish -->
         <ul class="navigation-bar">
           <li class="nav-item"><a href="#">Portfolio</a></li>
           <li class="nav-item"><a href="#">About</a></li>
@@ -72,7 +62,7 @@
     <!--my headline section ends-->
 
     <!--my Card works starts-->
-    <section class="my-works">
+    <section id="my-portfolio" class="my-works">
        
       <ul class="works-cards">
         <!-- my Card 1 starts -->
@@ -183,7 +173,7 @@
             </section>
             <!--my Card works ends-->
     <!-- my About Section Starts Here -->
-    <section class="about-section">
+    <section id ="about-me" class="about-section">
       <div class="my-headline-skill-container">
         <div class="my-about-headline">
           <h2 class="my-heading-large">About Myself</h2>
@@ -273,7 +263,7 @@
       </div>
     </section>
     <!-- my Contact Me Section Starts -->
-    <section class="my-contact-me-form-container">
+    <section id ="contacts" class="my-contact-me-form-container">
         <h1 class="my-contact-me-form-heading">
             Contact me
         </h1>
@@ -314,7 +304,7 @@
       </form>    
   </section>
     <!--my Contact Me Section Ends -->
-    <script src="app.js"></script>
-
+    <script src= "app.js"> </script>  
+  
   </body>
 </html>
