Add mobile menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             class="mob-nav-menu-butn">&#9776;</p>
           <!--my mobile-menu start -->
           
+        <div id="mobile-menu" class="mob-menu--hide">
+            <p id="hide-nav" class="mob-menu-close-icon"> x </p>
+
+          </div>
+        </div>
+
         <!-- my-mobile-menu finish -->
         <ul class="navigation-bar">
           <li class="nav-item"><a href="#">Portfolio</a></li>
