Add nav-list to the mobile menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
             class="mob-nav-menu-butn">&#9776;</p>
           <!--my mobile-menu start -->
           
-        <div id="mobile-menu" class="mob-menu--hide">
+          <div id="mobile-menu" class="mob-menu--hide">
             <p id="hide-nav" class="mob-menu-close-icon"> x </p>
-
+            <ul id="mobmenu-links">
+              <li><a href="#my-portfolio"> Portfolio</a></li>
+              <li><a href="#about-me">About</a></li>
+              <li><a href="#contacts">Contact</a></li>
+            </ul>
           </div>
         </div>
 
