add popup.js for card popup function

--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@
       </form>    
   </section>
     <!--my Contact Me Section Ends -->
-    <script src= "app.js"> </script>  
+    <script src= "app.js"> </script>
+    <script src= "popup.js"> </script>  
   
   </body>
 </html>
