update  index.html

--- a/index.html
+++ b/index.html
@@ -70,14 +70,8 @@
       </section>
     </section>
     <!--my headline section ends-->
-
     <!--my Card works starts-->
-    <section id="works" class="works">
-      <ul id="works-cards" class="my-works-cards">
-
-     </ul>
-     <div id="popup-container"></div>
-    </section>
+    <!--Add below-->
             <!--my Card works ends-->
     <!-- my About Section Starts Here -->
     <section id ="about-me" class="about-section">
