Added popup-container in index .html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       <ul id="works-cards" class="my-works-cards">
 
      </ul>
+     <div id="popup-container"></div>
     </section>
             <!--my Card works ends-->
     <!-- my About Section Starts Here -->
