--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         that you need built or a project that needs coding. I'd love to help
         with it
       </p>
-      <form  action="https://formspree.io/f/mjvdqdaj"
+      <form id="contact-form" action="https://formspree.io/f/mjvdqdaj"
       method="POST" class="contact-me-form">
         <input
           class="contact-me-form-text-input"
@@ -207,11 +207,14 @@
          <button class="my-contact-me-form-button" type="submit">
           Get In Touch
         </button>
+        <p id="error-message" class="error-message"></p>
       </form>    
   </section>
     <!--my Contact Me Section Ends -->
     <script src= "app.js"> </script>
-    <script src= "popup.js"> </script>  
+    <script src= "popup.js"> </script>
+    <script src= "script-contact.js"> </script>  
+  
   
   </body>
 </html>
